rc2 - Release Candidate 3 - 8/14/2023
...............................
1. Reverted the 'manifest.json' file to prevent iCloud3 from hanging on an HA startup if there is a problem starting some of the HA components.
2. Configure Settings - Added a 'Restart HA, Reload iCloud3' to the Configure Settings > Actions list. You can now restart HA or reload only the iCloud3 component if the is a problem.
3. Migration - Fixed some v2 to v3 configuration migration issues.
4. Area - The device will be assigned to the 'Personal Device' Area when it is added or when iCloud3 starts if it is not assigned to one.
5. Old Location - Now checking the status of both the iOS App and FamShr location to reset the old location status/counter as soon as the data is available instead of further down the tracking process.

rc2 - Release Candidate 2 - 8/8/2023
...............................
1. Fixed the problem causing the `duplicate_msg` error during start up.
2. Services - Added the iCloud3 Service Calls to the Developer tools > Services screen.
3. Cleaned up some code.
4. Direction of Travel History - Reformatted the history that is display when showing Tracking Monitors

rc1 - Release Candidate 1 - 8/6/2023
...............................
1. Event Log - Changed the text on the heading for each update. Now the Arrival Time (if going towards Home or another Track-fromZone) or the Next Update time is displayed.
2. Short interval tracking (15-secs when close to a zone) - The current location data is used if it is below the old location threshold. When interval is short (5-secs) after leaving or approaching a zone, that location was reused when the next interval was reached since it was not old and still acceptable. Now, the next update interval time is taken into consideration when determining if the locaqtion should be refreshed.